design: add minimal SVG icons to feature cards

--- a/static/lp/index.html
+++ b/static/lp/index.html
@@ -187,6 +187,13 @@
             padding: 40px 32px;
         }
 
+        .feature-icon {
+            width: 20px;
+            height: 20px;
+            margin-bottom: 16px;
+            opacity: 0.5;
+        }
+
         .feature h3 {
             font-size: 16px;
             font-weight: 600;
@@ -358,26 +365,32 @@
             <h2 class="section-title">1つのスコアに4つの視点</h2>
             <div class="features-grid">
                 <div class="feature">
+                    <svg class="feature-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><circle cx="12" cy="12" r="10"/><polyline points="12 6 12 12 16 14"/></svg>
                     <h3>Timing Analysis</h3>
                     <p>投稿間隔の規則性、応答速度、活動時間帯のパターンからBot的な行動を検出。</p>
                 </div>
                 <div class="feature">
+                    <svg class="feature-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M12 20h9"/><path d="M16.5 3.5a2.121 2.121 0 013 3L7 19l-4 1 1-4L16.5 3.5z"/></svg>
                     <h3>Style Analysis</h3>
                     <p>文章の長さ、語彙の多様性、句読点の使い方からAI生成テキストの特徴を判定。</p>
                 </div>
                 <div class="feature">
+                    <svg class="feature-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M17 21v-2a4 4 0 00-4-4H5a4 4 0 00-4 4v2"/><circle cx="9" cy="7" r="4"/><path d="M23 21v-2a4 4 0 00-3-3.87"/><path d="M16 3.13a4 4 0 010 7.75"/></svg>
                     <h3>Behavior Analysis</h3>
                     <p>チャンネル使用パターン、リプライ率、リアクション行動から人間らしさを評価。</p>
                 </div>
                 <div class="feature">
+                    <svg class="feature-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><rect x="4" y="4" width="16" height="16" rx="2"/><path d="M9 9h0"/><path d="M15 9h0"/><path d="M9 15h6"/></svg>
                     <h3>AI Detection</h3>
                     <p>定型文パターン、過度な丁寧さ、不自然な一貫性などAI特有の痕跡を識別。</p>
                 </div>
                 <div class="feature">
+                    <svg class="feature-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M22 12h-4l-3 9L9 3l-3 9H2"/></svg>
                     <h3>Real-time Monitoring</h3>
                     <p>全メッセージを自動収集・分析。閾値を超えたユーザーは管理者にアラート通知。</p>
                 </div>
                 <div class="feature">
+                    <svg class="feature-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><rect x="3" y="3" width="7" height="7"/><rect x="14" y="3" width="7" height="7"/><rect x="14" y="14" width="7" height="7"/><rect x="3" y="14" width="7" height="7"/></svg>
                     <h3>Web Dashboard</h3>
                     <p>サーバー統計、スコア分布、疑わしいユーザーリストをブラウザから確認。</p>
                 </div>
