feat: add profile and network analyzers, update LP to 6 perspectives

--- a/static/lp/index.html
+++ b/static/lp/index.html
@@ -325,7 +325,7 @@
             <div class="hero-label">Discordサーバー管理者向け</div>
             <h1>サーバーに潜むBotを、<br>見つけ出す。</h1>
             <p>スパムBot、自動投稿アカウント、AI偽装ユーザー。<br>
-            BotCheckは4つの分析エンジンで不審なアカウントを自動検知し、あなたのサーバーを守ります。</p>
+            BotCheckは6つの分析エンジンで不審なアカウントを自動検知し、あなたのサーバーを守ります。</p>
             <div class="cta-group">
                 <a href="https://discord.com/oauth2/authorize?client_id=1474728574320640011&permissions=2147559424&scope=bot+applications.commands"
                    class="btn btn-primary" target="_blank">サーバーに追加する</a>
@@ -352,7 +352,7 @@
                     <ul>
                         <li>不審なアカウントをスコアで可視化</li>
                         <li>リアルタイム監視で問題を未然に防止</li>
-                        <li>4つの分析で根拠ある判定を即座に</li>
+                        <li>6つの分析で根拠ある判定を即座に</li>
                         <li>ダッシュボードでサーバー全体を把握</li>
                     </ul>
                 </div>
@@ -393,7 +393,7 @@
     <section class="features">
         <div class="container">
             <div class="section-label">分析エンジン</div>
-            <h2>4つの視点で判定する</h2>
+            <h2>6つの視点で判定する</h2>
             <dl class="feature-list">
                 <div class="feature-row">
                     <dt>タイミング分析</dt>
@@ -410,6 +410,14 @@
                 <div class="feature-row">
                     <dt>AI検知</dt>
                     <dd>定型パターン、不自然な丁寧さ、過度な一貫性などAI特有の痕跡を識別</dd>
+                </div>
+                <div class="feature-row">
+                    <dt>プロフィール分析</dt>
+                    <dd>アカウント年齢、アバター、ユーザー名パターンからBot特有の特徴を検出</dd>
+                </div>
+                <div class="feature-row">
+                    <dt>ネットワーク分析</dt>
+                    <dd>会話の相互性、メンション関係、孤立度から社会的な人間らしさを評価</dd>
                 </div>
             </dl>
         </div>
