update: LP CTA - free trial messaging

--- a/static/lp/index.html
+++ b/static/lp/index.html
@@ -425,10 +425,10 @@
 
     <section class="cta-bottom">
         <div class="container">
-            <h2>無料で使えます。</h2>
-            <p>まずは試してみてください。追加するだけで、すぐに分析が始まります。</p>
+            <h2>まずは無料で、1ヶ月。</h2>
+            <p>全機能を30日間無料で試せます。クレジットカード不要。<br>追加するだけで、すぐに分析が始まります。</p>
             <a href="https://discord.com/oauth2/authorize?client_id=1474728574320640011&permissions=2147559424&scope=bot+applications.commands"
-               class="btn btn-primary" target="_blank">サーバーに追加する</a>
+               class="btn btn-primary" target="_blank">無料で始める</a>
         </div>
     </section>
 
